name:                pure-selection
version:             0.8.0.0
homepage:            purehs.org/doc/pure-selection
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-selection.git

library
  exposed-modules:
      Pure.Selection

  build-depends:
    base,
    pure-core,
    pure-events,
    pure-txt,
    pure-lifted,
    pure-parse,
    pure-transform
    
  if impl(ghcjs)
    js-sources:
      js/selection.js

  hs-source-dirs:      src
  default-language:    Haskell2010